Exam api updated.
